--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "draft-js": "^0.11.4",
+    "lodash": "^4.17.15",
+    "randomcolor": "^0.5.4",
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.1"
+    "react-redux": "^7.2.0",
+    "react-scripts": "3.3.1",
+    "redux": "^4.0.5",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
